# Novel-AI-Worker

./: README.md  pyproject.toml
src/: ai_services.py  config.py  pdf_services.py  test_worker.py  tts_services.py  types.py  worker.py
